--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,12 +50,13 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=rtiff
-  license: GPL-3
+  license: GPL-3.0-only
   summary: Reads and writes TIFF format images and returns them as a pixmap object. Because the resulting object can be very large for even modestly sized TIFF images, images can be reduced as they are read for improved performance.  This package is a wrapper around libtiff (www.libtiff.org), on which it depends (i.e. the
     libtiff shared library must be on your PATH for the binary to work, and tiffio.h must be on your system to build the package from source). By using libtiff's highlevel TIFFReadRGBAImage function, this package inherently supports a wide range of image formats and compression schemes. This package also provides an implementation
     of the Ridler Autothresholding algorithm for easy generation of binary masks as described in Ridler & Calvard (1978) <doi:10.1109/TSMC.1978.4310039>.
   license_family: GPL3
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
